upgrade for ideaFIX 1.4.0